package edu.fiuba.algo3.Modelo;

public interface Sentido {
  Posicion ejecutar(Posicion posicion);
}
